force-app/main/default/objects/Trailblazer_Event__c/fields/Check_In_Closed__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check In Closed</label>
    <type>Checkbox</type>
</CustomField>