force-app/main/default/objects/Trailblazer_Event__c/fields/Event_Phase__c.field-meta.xml
<CustomField>
    <fullName>Event_Phase__c</fullName>
    <label>Event Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check In</fullName>
            </value>
            <value>
                <fullName>Keynote 1</fullName>
            </value>
            <value>
                <fullName>Game 1</fullName>
            </value>
            <value>
                <fullName>Keynote 1 Feedback</fullName>
            </value>
            <value>
                <fullName>Booths and Sessions</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Game 2</fullName>
            </value>
            <value>
                <fullName>Keynote 2</fullName>
            </value>
            <value>
                <fullName>Keynote 2 Feedback</fullName>
            </value>
            <value>
                <fullName>Event Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>