force-app/main/default/objects/Trailblazer_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the event</description>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>