force-app/main/default/objects/Trailblazer_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Check_In_Closed__c</columns>
    <columns>Event_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>